can-socket/tests/compile-fail/can_id_too_high1.rs
fn main() {
	let _id = can_socket::id!(0x2000_0000);
}
